Remove AAF from xacml-pdp
Issue-ID: POLICY-4592
Change-Id: I5b23b31df436c64f15d98a6f6731ec842d4df86d
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>